Backend -> Reajustando ResourceServerConfig